--- a/backend/.env.example
+++ b/backend/.env.example
@@ -1,4 +1,8 @@
-# Port for Express server (optional, default is 3001)
+#Environment
+NODE_ENV=development
+#NODE_ENV=production
+
+# Port for Express server
 PORT=3001
 
 # MongoDB Connection URL
