--- a/backend/package.json
+++ b/backend/package.json
@@ -23,7 +23,9 @@
     "express-mongo-sanitize": "^2.2.0",
     "helmet": "^7.1.0",
     "mongoose": "^8.3.4",
+    "morgan": "^1.10.0",
     "multer": "^1.4.5-lts.1",
+    "winston": "^3.13.0",
     "xss-clean": "^0.1.4"
   }
 }
