--- a/frontend/package.json
+++ b/frontend/package.json
@@ -17,8 +17,10 @@
     "web-vitals": "^2.1.4"
   },
   "scripts": {
-    "start": "webpack --config webpack.config.js --mode production && webpack serve --mode development --open",
-    "build": "webpack --config webpack.config.js --mode production",
+    "build:dev": "webpack --mode development",
+    "build:prod": "webpack --mode production",
+    "serve:dev": "webpack serve --mode development --open",
+    "serve:prod": "webpack serve --mode production --open",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
   },
