--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
     "scripts": {
         "start:backend": "cd backend && npm run start",
-        "start:frontend": "cd frontend && npm start",
+        "start:frontend": "cd frontend && npm run serve:dev",
         "start": "concurrently \"npm run start:backend\" \"npm run start:frontend\""
     },
     "devDependencies": {
